basic done quiz

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 </head>
 <body>
   <div id="menu_home" style="display: none"></div>
-  <div id="menu_complete" style="display: none"></div>
+  <div id="menu_complete" style="display: none" class="collapse">
+    <input id="answer" />
+    <button id="checkAnswer">Проверить</button>
+    <div id="completeCollapse"></div>
+  </div>
 
   <ul id="dashboard" style="display: none">
     <li></li>
