upd music and crype

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Game</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
   
+  <!--<script type="text/javascript"-->
+  <!--  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVY-SjNHoTgHaf8_bBBF_vD1Oak30m8Uw&sensor=true">-->
+  <!--</script>-->
+  
   <script type="text/javascript" src="js/utils.js"></script>
   <script type="text/javascript" src="js/quiz.js"></script>
   <script type="text/javascript" src="js/dashboard.js"></script>
