--- a/index.html
+++ b/index.html
@@ -31,9 +31,12 @@
 
   <ul id="dashboard" style="display: none"></ul>
   
+  
   <div id="intro">
-    <p id="introText">some text</p>
-    <button id="introClose">Начать</button>
+    <div id="introContainer">
+      <p id="introText">some text</p>
+      <button id="introClose">Начать</button>
+    </div>
   </div>
   
   <div id="quizzesContainer" style="display: none"></div>
