--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTBx77k_csafr6h4-8I6cJJk1DXJMg-mQ&sensor=true">
   </script>
   
+  <script type="text/javascript" src="js/loader.js"></script>
   <script type="text/javascript" src="js/utils.js"></script>
   <script type="text/javascript" src="js/quiz.js"></script>
   <script type="text/javascript" src="js/dashboard.js"></script>
