add cheat and texts

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   
   <div id="intro">
     <div id="introContainer">
-      <p id="introText">some text</p>
+      <p id="introText">Здравствуй, храбрая ведьмочка! Мы надеемся ты сегодня хорошо выспалась, позавтракала? Потому что тебе понадобиться много сил. Да, сегодня, наконец-то настал день, твоего посвящения в совет ведьм! Но для начала тебе надо будет пройти ряд испытаний. Выполнять их ты можешь в любой последовательности. Какие-то из них ты можешь выполнить не выходя из кровати, а для каких-то придеться побегать, так что рекоммендуем тебе сразу ознакомиться со всеми, чтобы ты могла решить что тебе выполнить сначала, а что потом.. Для части заданий, тебе надо будет узнать какое-то секретное слово, а для каких-то просто выполнить какие-то действия. Ну чтож, ты можешь приступать к выполнению, желаем тебе удачи! И да, при возникновений каких-то серьезных трудностей, ты можешь обратиться сама знаешь к кому :)</p>
       <button id="introClose">Начать</button>
     </div>
   </div>
