--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="js/quiz.js"></script>
   <script type="text/javascript" src="js/dashboard.js"></script>
   <script type="text/javascript" src="js/intro.js"></script>
+  <script type="text/javascript" src="js/finish.js"></script>
   <script type="text/javascript" src="js/menu.js"></script>
   <script type="text/javascript" src="js/game.js"></script>
 </head>
@@ -41,6 +42,11 @@
   </div>
   
   <div id="quizzesContainer" style="display: none"></div>
+  
+  <div id="finish" style="display: none">
+    <p id="finishText">Все сделано!</p>
+    <div id="finishBg"></div>
+  </div>
   
   <script>
     game.start();
