texts and coordinates

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div id="quizzesContainer" style="display: none"></div>
   
   <div id="finish" style="display: none">
-    <p id="finishText">Все сделано!</p>
+    <p id="finishText">Поздравляем! Ты справилась со всеми заданиями! Мы в тебе нисколько не сомневались, теперь ты являешься полноправным членом высшего совета ведьм!</p>
     <div id="finishBg"></div>
   </div>
   
