--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"> 
   <meta name="viewport" content="width=device-width, user-scalable=no">
-  <title>Game</title>
+  <title>Witch</title>
   <link rel="stylesheet" type="text/css" href="style.css" />
   
   <script type="text/javascript"
